# scientific_pydantic

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_adapter.yml
.github/workflows/: ci.yml  pre-commit.yml
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/SUMMARY/: index.html
dev/api/scientific_pydantic/: index.html
dev/search/: search_index.json
src/scientific_pydantic/: __init__.py  ellipsis.py  range.py  schema.py  slice.py  slice_syntax.py  version_check.py
src/scientific_pydantic/astropy/: __init__.py  validators.py
src/scientific_pydantic/numpy/: __init__.py  dtype_adapter.py  ndarray_adapter.py  scalar_adapter.py  validators.py
src/scientific_pydantic/pyproj/: __init__.py  crs.py
src/scientific_pydantic/scipy/: __init__.py
src/scientific_pydantic/shapely/: __init__.py  adapters.py
tests/: test_ellipsis.py  test_import_isolation.py  test_range.py  test_slice.py  test_version_check.py
tests/astropy/: __init__.py
tests/astropy/time/: __init__.py  test_time_adapter.py
tests/astropy/units/: __init__.py  test_physical_type.py  test_quantity.py  test_unit.py
tests/numpy/: test_dtype.py  test_ndarray.py  test_scalars.py
tests/pyproj/: __init__.py  test_crs.py
tests/scipy/: __init__.py
tests/shapely/: __init__.py  test_adapters.py
v0.1.0/: 404.html  index.html  sitemap.xml
v0.1.0/SUMMARY/: index.html
v0.1.1/: 404.html  index.html  sitemap.xml
v0.1.1/SUMMARY/: index.html
v0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.2.0/SUMMARY/: index.html
v0.2.0/search/: search_index.json
v0.3.0/: 404.html  gen_pages.py  index.html  sitemap.xml
v0.3.0/SUMMARY/: index.html
v0.3.0/search/: search_index.json
(+59 files in other folders)
