[project]
name = "scientific-pydantic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Philip Salvaggio", email = "salvaggio.philip@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "astropy>=6.1.7",
    "numpy>=2.2.6",
    "prek>=0.2.25",
    "pyrefly>=0.46.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.10",
    "scipy>=1.15.3",
    "shapely>=2.1.2",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Annotations on *args
    "ANN002",

    # Annotations on **kwargs
    "ANN003",

    # Pydantic's type conversion's necessitate the use of Any
    "ANN401",

    # Trailing commas, conflicts with formatter
    "COM812",

    # Docstring conventions (grammar, etc.)
    "D400",
    "D415",

    # We are allowing deferred imports. This is a key design choice for this
    # library, as we are assuming the user is bringing in their own scientific
    # libraries, we are only depending on pydantic.
    "PLC0415",

    # Relative imports
    "TID252",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed in tests
    "ARG", # Unused function args -> fixtures
    "PLR2004", # Magic value used in comparison
    "S311", # Standard pseudo-random generators
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=scientific_pydantic --cov-report=html --cov-branch"
